--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name"        : "phraseanet plugin expose",
+  "name"        : "alchemy/phraseanet-plugin-expose",
   "description" : "Phraseanet plugin expose",
   "license"     : "MIT",
   "require": {},
   "require-dev": {},
   "autoload": {
     "psr-4": {
-      "Alchemy\\ExposePlugin\\"        : "src/"
+      "Alchemy\\ExposePlugin\\": "src/"
     }
   }
 }
